--- a/package.json
+++ b/package.json
@@ -3,19 +3,32 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.js"
   },
   "repository": "git@github.com:Letasian/Management.git",
   "author": "Letasian <18770913233@163.com>",
   "license": "MIT",
   "dependencies": {
+    "autoprefixer": "^8.4.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "cross-env": "^5.1.4",
     "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
+    "postcss-loader": "^2.1.4",
+    "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
     "vue": "^2.5.16",
-    "vue-loader": "^15.0.4",
+    "vue-loader": "^15.0.5",
     "vue-template-compiler": "^2.5.16",
-    "webpack": "^4.6.0"
+    "webpack": "^4.6.0",
+    "webpack-dev-server": "^3.1.3"
   },
   "devDependencies": {
-    "webpack-cli": "^2.0.15"
+    "vue-html-loader": "^1.2.4",
+    "vue-style-loader": "^4.1.0",
+    "webpack-cli": "^2.1.2"
   }
 }
