--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "babel-loader": "^7.1.4",
     "cross-env": "^5.1.4",
     "css-loader": "^0.28.11",
+    "element-ui": "^2.3.7",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "postcss-loader": "^2.1.4",
@@ -22,11 +24,13 @@
     "url-loader": "^1.0.1",
     "vue": "^2.5.16",
     "vue-loader": "^15.0.5",
+    "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.6.0",
     "webpack-dev-server": "^3.1.3"
   },
   "devDependencies": {
+    "babel-plugin-component": "^1.1.0",
     "vue-html-loader": "^1.2.4",
     "vue-style-loader": "^4.1.0",
     "webpack-cli": "^2.1.2"
