--- a/package.json
+++ b/package.json
@@ -3,16 +3,22 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.js"
+    "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.config.client.js",
+    "build":"yarn run clean && yarn run build:client",
+    "clean":"rimraf dist",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js"
   },
   "repository": "git@github.com:Letasian/Management.git",
   "author": "Letasian <18770913233@163.com>",
   "license": "MIT",
   "dependencies": {
+    "vue": "^2.5.16"
+  },
+  "devDependencies": {
     "autoprefixer": "^8.4.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
+    "babel-plugin-component": "^1.1.0",
     "cross-env": "^5.1.4",
     "css-loader": "^0.28.11",
     "element-ui": "^2.3.7",
@@ -20,19 +26,17 @@
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "postcss-loader": "^2.1.4",
+    "rimraf": "^2.6.2",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
-    "vue": "^2.5.16",
+    "vue-html-loader": "^1.2.4",
     "vue-loader": "^15.0.5",
     "vue-router": "^3.0.1",
+    "vue-style-loader": "^4.1.0",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.6.0",
-    "webpack-dev-server": "^3.1.3"
-  },
-  "devDependencies": {
-    "babel-plugin-component": "^1.1.0",
-    "vue-html-loader": "^1.2.4",
-    "vue-style-loader": "^4.1.0",
-    "webpack-cli": "^2.1.2"
+    "webpack-cli": "^2.1.2",
+    "webpack-dev-server": "^3.1.3",
+    "webpack-merge": "^4.1.2"
   }
 }
