--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.config.client.js",
-    "build":"yarn run clean && yarn run build:client",
-    "clean":"rimraf dist",
+    "build": "yarn run clean && yarn run build:client",
+    "clean": "rimraf dist",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js"
   },
   "repository": "git@github.com:Letasian/Management.git",
@@ -22,7 +22,7 @@
     "cross-env": "^5.1.4",
     "css-loader": "^0.28.11",
     "element-ui": "^2.3.7",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "postcss-loader": "^2.1.4",
